--- a/index.html
+++ b/index.html
@@ -14,12 +14,70 @@
             
             <div class="logo">
                 <!-- <span class="odin"><img src="odin-lined.png"/></span>
-                <span>ODIN</span> -->
+                <span class="text">ODIN</span> -->
             </div>
+
+            <span class="odin"><img src="odin-lined.png"/></span>
+            <span class="text">ODIN</span>
+
+            <p class="credit">Photo by <span class="under">Halie West</span> on <span class="under">Unsplash</span></p>
         </div>
 
         <div class="form">
+            <div class="first-section">
+                <p>This is not a real online service! You know you need something like this<br>
+                in your life to help you realize your deepest dreams.<br>
+                Sign up <em>now</em> to get started.</p>
 
+                <p>You <em>know</em> you want to.</p>
+            </div>
+
+            <div class="second-section">
+                <form class="inputs" action="#" method="post"> 
+                    <p class="para">Let's do this!</p>
+
+                    <div class="one">
+                        <div class="left">
+                            <span>FIRST NAME</span>
+                            <input type="text"/>
+                        </div>
+
+                        <div class="right">
+                            <span>LAST NAME</span>
+                            <input type="text"/>
+                        </div>
+                    </div>
+
+                    <div class="one">
+                        <div class="left">
+                            <span>EMAIL</span>
+                            <input type="email"/>
+                        </div>
+
+                        <div class="right">
+                            <span>PHONE NUMBER</span>
+                            <input type="tel"/>
+                        </div>
+                    </div>
+
+                    <div class="one">
+                        <div class="left">
+                            <span>PASSWORD</span>
+                            <input type="email"/>
+                        </div>
+
+                        <div class="right">
+                            <span>CONFIRM PASSWORD</span>
+                            <input type="tel"/>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+            <div class="third-section">
+                <button class="btn">Create Account</button>
+                <p>Alredy have an account? <span class="login">Log in</span></p>
+            </div>
         </div>
     </div>
 </body>
