Added comment for alternative method in HTML file.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
             
             <div class="logo">
                 <!-- <span class="odin"><img src="odin-lined.png"/></span>
-                <span class="text">ODIN</span> -->
+                <span class="text">ODIN</span> 
+                
+                I can go the route to make the image as the backgroud of about 35% of the entire
+                page width, then have a div above the div the image serve as its background.
+                I'd make the new div transluscent, embed the odin logo and text and style them within.
+                -->
             </div>
 
             <span class="odin"><img src="odin-lined.png"/></span>
